# ExchangeAndBrown

./: Documentation.md  LICENSE.md  README.md
src/: CMakeLists.txt  exchange_runner.cpp  main.cpp  simple_brown.cpp
src/doc/: Doxyfile  references.bib
src/experiment_runners/: clustering_facts.cpp  compute_brown_over_clusters.cpp  print_clustering_ami.cpp
src/libs/: CLI11.hpp
src/libs/json/: README.md
src/src/: CMakeLists.txt  CorpusUtils.cpp  CorpusUtils.h  Utils.cpp  Utils.h
src/src/BrownClusteringAlgorithm/: BrownClusteringAlgorithm.cpp  BrownClusteringAlgorithm.h
src/src/ExchangeAlgorithm/: ExchangeAlgorithm.cpp  ExchangeAlgorithm.h
src/src/ExchangeAlgorithm/Exchange/: Exchange.cpp  Exchange.h
src/src/ExchangeAlgorithm/StochasticExchange/: StochasticExchange.cpp  StochasticExchange.h
src/src/models/: Corpus.cpp  Corpus.h  WordMappings.cpp  WordMappings.h
src/src/readers/: AbstractReader.h  ReaderClusteringIntoCorpus.cpp  ReaderClusteringIntoCorpus.h  ReaderFrequency.cpp  ReaderFrequency.h  ReaderNoOrder.cpp  ReaderNoOrder.h  ReaderNoOrderSkip.cpp  ReaderNoOrderSkip.h  ReaderThreshold.cpp  ReaderThreshold.h
src/src/tree/: InnerNode.cpp  InnerNode.h  LeafNode.cpp  LeafNode.h  Node.cpp  Node.h  RootNode.cpp  RootNode.h
src/tests/: CMakeLists.txt
src/tests/tests/: TestBrownClusteringAlgorithm.cpp  TestBrownClusteringAlgorithm.h  TestCorpus.cpp  TestCorpusUtils.cpp  TestExchange.cpp  TestReaderNoOrderSkip.cpp  TestReaderThreshold.cpp  TestTree.cpp  TestUtil.cpp  TestUtil.h  TestWordMappings.cpp  main.cpp
src/tests/tests/test_data/: abcd.txt  alice_long_tokenized.txt  cluster_assignments.test  debug_dog.txt  skip_gram_1.txt  skip_gram_1.vocabulary
